# neoma

./: .env.example  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESKTOP.md  Dockerfile  INSTALL.md  README.md  ROADMAP.md  SECURITY.md  buildcommands.txt  buildcommandsfromfeedback.txt  docker-compose.yml  eslint.config.js  index.html  neoma-setup.bat  neoma-setup.sh  nginx.conf  package-lock.json  package.json  playwright.config.ts  start.bat  start.sh  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vercel.json  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  desktop-release.yml  pages.yml  release.yml  test.yml
docs/: architecture.md  contributing.md  markdown-compatibility.md  privacy.md  roadmap.md  storage.md
docs/user-research/: first-overview.md
e2e/: smoke.spec.ts
scripts/: build-site.mjs  generate-icons.mjs  patch-ios-webview.mjs  patch-ios-xcode-env.mjs  sync-ios-icons.mjs
src/: main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx  about.ts  fileOrder.ts  navigation.ts  registerBuiltins.ts  registries.ts  tabsStore.ts  uiStore.ts  usePwa.ts  vaultStore.ts
src/calendar/: events.ts  ics.ts  icsStore.ts  newEvent.ts
src/commands/: defaultCommands.ts  registry.ts  shortcuts.ts
src/components/: ActivityRail.tsx  AttachmentPicker.tsx  Breadcrumbs.tsx  CalendarRefPicker.tsx  CalendarView.tsx  ColorPicker.tsx  CommandPalette.tsx  ContextMenu.tsx  Dialogs.tsx  Editor.tsx  FileTree.tsx  FlashcardReview.tsx  (+23 more)
website/: index.html
(+100 files in other folders)
