[package]
name = "neoma"
version = "0.2.1"
description = "Local-first, offline research notebook"
authors = ["neoma contributors"]
license = "AGPL-3.0-or-later"
edition = "2021"
rust-version = "1.77"

[lib]
name = "neoma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Desktop-only plugins (tray, single-instance, launch-on-startup). Not built
# for iOS/Android, where these concepts don't apply.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
